Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -9891,7 +9891,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200211174514590" list="[[Introduction to Reinforcement Learning]]" modified="20200211214527578" title="$:/StoryList" revision="66" bag="default">
+<div created="20200211174514590" list="[[Reinforcement Learning: David Silver Course]] [[Introduction to Reinforcement Learning]]" modified="20200211215137187" title="$:/StoryList" revision="73" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -12110,8 +12110,12 @@ reduction step 2 - stochastic gradient langevin dynamics (SGLD) - instead of lea
 implementable in entropic mirror descent - hsieh et al 2019
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191125022514242" modified="20200211210815357" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="4" bag="default">
-<pre># [[Introduction to Reinforcement Learning]]</pre>
+<div author="Siddharth Joshi" created="20191125022514242" modified="20200211215245051" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="7" bag="default">
+<pre># [[Introduction to Reinforcement Learning]]
+
+Link to videos: https://www.youtube.com/watch?v=2pWv7GOvuf0&amp;list=PLzuuYNsE1EZAXYR4FJ75jcJseBmo4KQ9-&amp;fbclid=IwAR0lD-SDq5vtgIlUwb4IQryt6USHNndwB2eI0j7cpyfsPkeESv4Rok5YGhY
+
+Link to slides: http://www0.cs.ucl.ac.uk/staff/d.silver/web/Teaching.html</pre>
 </div>
 <div created="20200210183534008" modified="20200210184458014" tags="[[machine learning]]" title="Ridge Regression" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>$$l_2$$ regularized linear regression aka Ridge Regression
