--- a/index.html
+++ b/index.html
@@ -9895,7 +9895,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200212023242611" list="[[Markov Decision Processes]] [[Markov Decision Processes from scratch]]" modified="20200212054847916" title="$:/StoryList" revision="38" bag="default">
+<div created="20200212023242611" list="" modified="20200212054847916" title="$:/StoryList" revision="46" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -11529,7 +11529,7 @@ Summary - https://imgur.com/cgsGbJD
 
 </pre>
 </div>
-<div created="20200212050201203" modified="20200212055446269" tags="[[reinforcement learning]] [[Markov Decision Processes from scratch]]" title="Markov Decision Processes" revision="7" bag="default">
+<div created="20200212050201203" modified="20200212060014626" tags="[[reinforcement learning]] [[Markov Decision Processes from scratch]]" title="Markov Decision Processes" revision="9" bag="default">
 <pre>A Markov Decision Process is MRP with decisions:
 
 * S is a finite set of actions (probably can generalize)
@@ -11605,9 +11605,11 @@ Dealing with missing information -&gt; imperfect model:
 * factor in the uncertainty into the MDP
 * capture the uncertainty via the discount factor 
 
-Risk-sensitive MDP - considering variance of the reward rather than just expected reward</pre>
+Risk-sensitive MDP - considering variance of the reward rather than just expected reward
+
+How do you represent a very large MDP: typically there is a convenient function to help us do this</pre>
 </div>
-<div created="20200212013453949" modified="20200212054843505" tags="[[reinforcement learning]]" title="Markov Decision Processes from scratch" type="text/vnd.tiddlywiki" revision="4" bag="default">
+<div created="20200212013453949" modified="20200212060203816" tags="[[reinforcement learning]]" title="Markov Decision Processes from scratch" type="text/vnd.tiddlywiki" revision="5" bag="default">
 <pre>{{Markov Processes}}
 
 {{Markov Reward Processes}}
@@ -11616,7 +11618,9 @@ Risk-sensitive MDP - considering variance of the reward rather than just expecte
 
 Extensions to MDP: 
 
-* </pre>
+* [[Infinite MDPs]]
+* [[Partially Observable Markov Decision Processes]]
+* [[Ergodic Markov Processes]]</pre>
 </div>
 <div created="20200212014914394" modified="20200212023143398" tags="[[Markov Decision Processes from scratch]]" title="Markov Processes" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>MDP formally describes an environment for reinforcement learning (assume the environment is fully observable)
