--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@ Error message and password prompt
 
 <li>$:/state/sidebar</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -258,6 +260,8 @@ Error message and password prompt
 <li>Groups of Nodes</li>
 
 <li>GVF</li>
+
+<li>Historical Perspective on AI</li>
 
 <li>How to choose a ML Algorithm</li>
 
@@ -370,6 +374,8 @@ Error message and password prompt
 <li>Things I want to learn about in 2020</li>
 
 <li>UCLA CS 201 Winter 2020</li>
+
+<li>UCLA CS 262A Learning and Reasoning with Bayesian Networks -</li>
 
 <li>UCLA CS M146 - Machine Learning</li>
 
@@ -9883,6 +9889,9 @@ Error message and password prompt
 <div created="20200212023300912" modified="20200212023301894" title="$:/state/sidebar" revision="2" bag="default">
 <pre>yes</pre>
 </div>
+<div created="20200212062240427" modified="20200212064154818" title="$:/state/tab/sidebar--595412856" revision="2" bag="default">
+<pre>$:/core/ui/SideBar/Open</pre>
+</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9895,7 +9904,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200212023242611" list="" modified="20200212054847916" title="$:/StoryList" revision="46" bag="default">
+<div created="20200212023242611" list="[[UCLA CS 262A Learning and Reasoning with Bayesian Networks -]]" modified="20200212062715866" title="$:/StoryList" revision="60" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9956,8 +9965,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200212023230992" modified="20200212055450323" title="$:/temp/search" revision="47" bag="default">
-<pre></pre>
+<div created="20200212023230992" modified="20200212062446547" title="$:/temp/search" revision="63" bag="default">
+<pre>bayesian</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -11047,6 +11056,35 @@ Creating a network with 2 k-components and one k-core - take two copies of a k +
 </div>
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
+</div>
+<div created="20200212062750745" modified="20200212064101000" tags="[[bayesian networks]] [[artificial intelligence]]" title="Historical Perspective on AI" revision="1" bag="default">
+<pre>Propositional Logic used in first wave of AI, however limitations were soon discovered:
+
+* Birds can fly (if it sees a bird that can't fly, this system breaks down), assume otherwise normal birds can fly (cannot make any claims as it can't tell if bird is normal or not)
+* Main issue is the monotonicity of logic i.e. more statements cannot invalidate a prior conclusion
+
+Alternative to avoid this (proposed by ~McCarthy) - make as many assumptions as possible until you run into a contradiction:
+
+* A quaker is a pacifist, A republican is not a pacifist, Nixon is a quaker and a republican.
+* Cannot deal with this statement and must throw away one of the assumptions
+
+Realistic example of human reasoning: https://imgur.com/a/8L3IaWz
+
+Degrees of Beliefs - a number than one assigns to a proposition, in lieu of having to declare it as a fact or an assumption - interpreted as probability
+
+Initial Reactions:
+
+* Cognitive Side - do humans use probabilities
+* Practically - where do the numbers come from? are the systems robust to small changes in probabilities
+* Computational - will such systems scale
+
+Model-Based Approach: Represent &amp; Reason, Logic &amp; Probability
+
+Model-Blind Approach - Fit Functions to Data, Neural Networks
+
+Extremely interesting discussing of AI: https://arxiv.org/pdf/1801.04016.pdf
+
+https://imgur.com/m9I4c5A</pre>
 </div>
 <div created="20200209230643105" modified="20200209230926568" tags="[[machine learning]]" title="How to choose a ML Algorithm" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Visualize data to understand trends in the dataset - understand which features are useful and which aren't or what kind of relation there exists between the features and labels / values
@@ -12572,6 +12610,9 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[A Geometric Data Structure from Neuroscience by Sanjoy Dasgupta]]
 # [[Quantum Temporal Logic by Nengkun Yu]]
 </pre>
+</div>
+<div created="20200212062244378" modified="20200212064150174" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks -" revision="3" bag="default">
+<pre># [[Historical Perspective on AI]]</pre>
 </div>
 <div created="20200126032331506" modified="20200210191753424" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>!!! Syllabus
