--- a/index.html
+++ b/index.html
@@ -9965,8 +9965,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200212023230992" modified="20200212062446547" title="$:/temp/search" revision="63" bag="default">
-<pre>bayesian</pre>
+<div created="20200212023230992" modified="20200212064432334" title="$:/temp/search" revision="64" bag="default">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
