--- a/index.html
+++ b/index.html
@@ -177,12 +177,6 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
-<li>$:/state/showeditpreview</li>
-
-<li>$:/state/sidebar</li>
-
-<li>$:/state/tab/sidebar--595412856</li>
-
 <li>$:/status/IsAnonymous</li>
 
 <li>$:/status/IsLoggedIn</li>
@@ -194,8 +188,6 @@ Error message and password prompt
 <li>$:/StoryList</li>
 
 <li>$:/temp/info-plugin</li>
-
-<li>$:/temp/search</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -392,6 +384,8 @@ Error message and password prompt
 <li>UCLA Math 168 - Introduction to Networks</li>
 
 <li>Welcome</li>
+
+<li>ZKStarks</li>
 
 </ul>
 </p>
@@ -9883,15 +9877,6 @@ Error message and password prompt
 <div created="20191119201741688" modified="20191119201751499" title="$:/SiteTitle" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Sid's ~TiddlyWiki</pre>
 </div>
-<div created="20200212045954390" modified="20200212045954390" title="$:/state/showeditpreview" revision="1" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200212023300912" modified="20200212023301894" title="$:/state/sidebar" revision="2" bag="default">
-<pre>yes</pre>
-</div>
-<div created="20200212062240427" modified="20200212064154818" title="$:/state/tab/sidebar--595412856" revision="2" bag="default">
-<pre>$:/core/ui/SideBar/Open</pre>
-</div>
 <div title="$:/status/IsAnonymous" revision="1" bag="default">
 <pre>yes</pre>
 </div>
@@ -9904,7 +9889,7 @@ Error message and password prompt
 <div title="$:/status/UserName" revision="1" bag="default">
 <pre></pre>
 </div>
-<div created="20200212023242611" list="[[UCLA CS 262A Learning and Reasoning with Bayesian Networks -]]" modified="20200212062715866" title="$:/StoryList" revision="60" bag="default">
+<div created="20200212181902886" list="ZKStarks Welcome [[How to Contribute?]]" modified="20200212181902887" title="$:/StoryList" revision="5" bag="default">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json" revision="0" bag="default">
@@ -9952,11 +9937,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1920&quot;
+            &quot;text&quot;: &quot;1440&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1080&quot;
+            &quot;text&quot;: &quot;900&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -9964,9 +9949,6 @@ Error message and password prompt
         }
     }
 }</pre>
-</div>
-<div created="20200212023230992" modified="20200212064432334" title="$:/temp/search" revision="64" bag="default">
-<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.21" revision="0" bag="default">
 <pre>{
@@ -11057,7 +11039,7 @@ Creating a network with 2 k-components and one k-core - take two copies of a k +
 <div author="Siddharth Joshi, Tejas Ramdas" created="20191119200401984" modified="20191121010432345" tags="incomplete [[machine learning]] [[reinforcement learning]] research [[intelligence project]]" title="GVF" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>General Value Function</pre>
 </div>
-<div created="20200212062750745" modified="20200212064101000" tags="[[bayesian networks]] [[artificial intelligence]]" title="Historical Perspective on AI" revision="1" bag="default">
+<div created="20200212062750745" modified="20200212064102077" tags="[[bayesian networks]] [[artificial intelligence]]" title="Historical Perspective on AI" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Propositional Logic used in first wave of AI, however limitations were soon discovered:
 
 * Birds can fly (if it sees a bird that can't fly, this system breaks down), assume otherwise normal birds can fly (cannot make any claims as it can't tell if bird is normal or not)
@@ -11567,7 +11549,7 @@ Summary - https://imgur.com/cgsGbJD
 
 </pre>
 </div>
-<div created="20200212050201203" modified="20200212060014626" tags="[[reinforcement learning]] [[Markov Decision Processes from scratch]]" title="Markov Decision Processes" revision="9" bag="default">
+<div created="20200212050201203" modified="20200212060016088" tags="[[reinforcement learning]] [[Markov Decision Processes from scratch]]" title="Markov Decision Processes" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>A Markov Decision Process is MRP with decisions:
 
 * S is a finite set of actions (probably can generalize)
@@ -11647,7 +11629,7 @@ Risk-sensitive MDP - considering variance of the reward rather than just expecte
 
 How do you represent a very large MDP: typically there is a convenient function to help us do this</pre>
 </div>
-<div created="20200212013453949" modified="20200212060203816" tags="[[reinforcement learning]]" title="Markov Decision Processes from scratch" type="text/vnd.tiddlywiki" revision="5" bag="default">
+<div created="20200212013453949" modified="20200212060205305" tags="[[reinforcement learning]]" title="Markov Decision Processes from scratch" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>{{Markov Processes}}
 
 {{Markov Reward Processes}}
@@ -12314,7 +12296,7 @@ reduction step 2 - stochastic gradient langevin dynamics (SGLD) - instead of lea
 implementable in entropic mirror descent - hsieh et al 2019
 </pre>
 </div>
-<div author="Siddharth Joshi" created="20191125022514242" modified="20200212023302995" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="1" bag="default">
+<div author="Siddharth Joshi" created="20191125022514242" modified="20200212023304074" tags="[[online course]] [[reinforcement learning]] [[machine learning]]" title="Reinforcement Learning: David Silver Course" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre>Part 1: Elementary Reinforcement Learning
 
 # [[Introduction to Reinforcement Learning]]
@@ -12611,7 +12593,7 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 # [[Quantum Temporal Logic by Nengkun Yu]]
 </pre>
 </div>
-<div created="20200212062244378" modified="20200212064150174" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks -" revision="3" bag="default">
+<div created="20200212062244378" modified="20200212064151526" tags="[[artificial intelligence]] ucla [[bayesian networks]]" title="UCLA CS 262A Learning and Reasoning with Bayesian Networks -" type="text/vnd.tiddlywiki" revision="0" bag="default">
 <pre># [[Historical Perspective on AI]]</pre>
 </div>
 <div created="20200126032331506" modified="20200210191753424" tags="[[machine learning]] ucla" title="UCLA CS M146 - Machine Learning" type="text/vnd.tiddlywiki" revision="0" bag="default">
@@ -12687,6 +12669,17 @@ Partially Observable Environments - indirectly observes environment (e.g. poker 
 <pre>Hi, welcome to my ~TiddlyWiki!
 This is a collection of notes on a wide variety of topics compiled from my personal work.
 Enjoy!</pre>
+</div>
+<div created="20200212181429701" modified="20200213180857935" tags="cryptography" title="ZKStarks" type="text/vnd.tiddlywiki" revision="2" bag="default">
+<pre>https://eprint.iacr.org/2018/046.pdf
+
+https://www.coinresear.ch/snapshots/Ben-Sasson2018
+
+Expression goes from I know the secret to I know the trace table that makes these polynomials low degree
+
+https://imgur.com/VtemI6G -&gt; https://imgur.com/rzBWF2K -&gt; https://imgur.com/OsinRP3
+
+And then this is reduced to </pre>
 </div>
 
 </div>
